Disabled AWT's built-in HiDPI support (users can support it with Notcute provided utilities by themselves), back to Java 8 for higher compatibility